RESOLVED FIXED269152
[IFC] Do don't consider natural breaking opportunities as soft-wrap boundaries when style does not allow wrapping (part2)
https://bugs.webkit.org/show_bug.cgi?id=269152
Summary [IFC] Do don't consider natural breaking opportunities as soft-wrap boundarie...
alan
Reported 2024-02-10 19:02:03 PST
not just text only anymore.
Attachments
Patch (2.27 KB, patch)
2024-02-10 20:02 PST, alan
no flags
Patch (3.01 KB, patch)
2024-02-10 21:01 PST, alan
no flags
[fast-cq]Patch (3.01 KB, patch)
2024-02-11 06:02 PST, alan
no flags
alan
Comment 1 2024-02-10 20:02:59 PST
alan
Comment 2 2024-02-10 21:01:38 PST
alan
Comment 3 2024-02-11 06:02:10 PST
Created attachment 469817 [details] [fast-cq]Patch
EWS
Comment 4 2024-02-11 06:43:44 PST
Committed 274444@main (7cd082919192): <https://commits.webkit.org/274444@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469817 [details].
Radar WebKit Bug Importer
Comment 5 2024-02-11 06:44:20 PST
Note You need to log in before you can comment on or make changes to this bug.