[IFC] Do don't consider natural breaking opportunities as soft-wrap boundaries when style does not allow wrapping (part2) https://bugs.webkit.org/show_bug.cgi?id=269152

Reviewed by Antti Koivisto.

Expand the same parent no-wrap rule to all types of content.
(This is in preparation for taking care of FIXME at isAtSoftWrapOpportunity)

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::isAtSoftWrapOpportunity):

Canonical link: https://commits.webkit.org/274444@main